--- a/trades.html
+++ b/trades.html
@@ -1,121 +1,123 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
 <head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	
+
 	<title>Trades</title>
 	<link rel = "stylesheet" href="assests/style.css">
 </head>
 <body>
 	<header>
-		<div class= "container">
-			<div class="userNav">
-				<ul >
+		
+		<div class="userNav">
+			<ul >
 
-					<li class="logo"> <a href="index.html"><img src="assests/image/logo.jpg"> </a> </li>
+				<li class="logo"> <a href="index.html"><img src="assests/image/logo.jpg" alt="logo"> </a> </li>
 
-					<li class="animate"><a href="#"> Sign Up  </a> </li>
+				<li class="animate"><a href="#"> Sign Up  </a> </li>
 
-					<li class="animate"><a href="#"> Log in</a></li>
-					<li class="animate"> <a href="newTrade.html">   Start Trading </a> </li>
-				</ul>
-			</div>
+				<li class="animate"><a href="#"> Log in</a></li>
+				<li class="animate"> <a href="newTrade.html">   Start Trading </a> </li>
+			</ul>
+			
 		</div>
 	</header>
 	<hr>
 	<nav>
-		<div class="novContents">
-
+		<div class="navContents">
 			<ul class="siteNav">
 				<li> <a  href="index.html"> Homes </a> </li>
 				<li > <a class="active" href="#"> Trades </a> </li>
 			</ul>
 		</div>
+
+	</nav>
 	<article class="tradesMain" >
-		<center>
+		
 		<h1> Refurbished Heaphones </h1>
-	</center>
-		<div class="headphones">
-			<div class="grid-container">
-			
-					<div class="card">
-					  <img src="assests/image/airpodsMax.jpg" alt="airpodsMax" style="width:100%">
-					  <h1>Airpods Pro HighQuality</h1>
-					  <p class="price">$199.99</p>
-					  <p>Some text about the Airpods..</p>
-					  <p><a href="trade.html"><button> View Details</button> </a></p>
-					</div>
 
-					<div class="card">
-					  <img src="assests/image/airpodsMax.jpg" alt="airpodsMax" style="width:100%">
-					  <h1>Airpods Pro HighQuality</h1>
-					  <p class="price">$199.99</p>
-					  <p>Some text about the Airpods..</p>
-					  <p><a href="trade.html"><button> View Details</button> </a></p>
-					</div>
+		<div class="headphonesGrid">
+			<div class="grid-container-headphones">
+				
+				<div class="cardView">
+					<img src="assests/image/airpodsMax.jpg" alt="airpodsMax" >
+					<h1>Airpods Pro HighQuality</h1>
+					<p class="cost">$199.99</p>
+					<p>Some text about the Airpods..</p>
+					<p class="detailTrade"><a href="trade.html" class="buttonViewDetails" > View Details</a> </p>
+				</div>
 
-					<div class="card">
-					  <img src="assests/image/airpodsMax.jpg" alt="airpodsMax" style="width:100%">
-					  <h1>Airpods Pro HighQuality</h1>
-					  <p class="price">$199.99</p>
-					  <p>Some text about the Airpods..</p>
-					  <p><a href="trade.html"><button> View Details</button> </a></p>
-					</div>
-
-
-					<div class="card">
-					  <img src="assests/image/airpodsMax.jpg" alt="airpodsMax" style="width:100%">
-					  <h1>Airpods Pro HighQuality</h1>
-					  <p class="price">$199.99</p>
-					  <p>Some text about the Airpods..</p>
-					  <p><a href="trade.html"><button> View Details</button> </a></p>
-					</div>
-
+				<div class="cardView">
+					<img src="assests/image/airpodsMax.jpg" alt="airpodsMax" >
+					<h1>Airpods Pro HighQuality</h1>
+					<p class="cost">$199.99</p>
+					<p>Some text about the Airpods..</p>
+					<p class="detailTrade"><a href="trade.html" class="buttonViewDetails" > View Details</a> </p>
+				</div>
+				<div class="cardView">
+					<img src="assests/image/airpodsMax.jpg" alt="airpodsMax" >
+					<h1>Airpods Pro HighQuality</h1>
+					<p class="cost">$199.99</p>
+					<p>Some text about the Airpods..</p>
+					<p class="detailTrade"><a href="trade.html" class="buttonViewDetails" > View Details</a> </p>
+				</div>
+				<div class="cardView">
+					<img src="assests/image/airpodsMax.jpg" alt="airpodsMax" >
+					<h1>Airpods Pro HighQuality</h1>
+					<p class="cost">$199.99</p>
+					<p>Some text about the Airpods..</p>
+					<p class="detailTrade"><a href="trade.html" class="buttonViewDetails" > View Details</a> </p>
+				</div>
 			</div>
 		</div>
 
-			<h1> Refurbished Laptop </h1>
+		<h1> Refurbished laptop </h1>
+
+		
 		<div class="laptopGrid">
-			<div class="grid-container">
-			
-					<div class="card">
-					  <img src="assests/image/airpodsMax.jpg" alt="airpodsMax" style="width:100%">
-					  <h1>Airpods Pro HighQuality</h1>
-					  <p class="price">$199.99</p>
-					  <p>Some text about the Airpods..</p>
-					  <p><a href="trade.html"><button> View Details</button> </a></p>
-					</div>
+			<div class="grid-container-laptop">
+				
+				<div class="cardView">
+					<img src="assests/image/airpodsMax.jpg" alt="airpodsMax" >
+					<h1>Airpods Pro HighQuality</h1>
+					<p class="cost">$199.99</p>
+					<p>Some text about the Airpods..</p>
+					<p class="detailTrade"><a href="trade.html" class="buttonViewDetails" > View Details</a> </p>
+				</div>
 
+				<div class="cardView">
+					<img src="assests/image/airpodsMax.jpg" alt="airpodsMax" >
+					<h1>Airpods Pro HighQuality</h1>
+					<p class="cost">$199.99</p>
+					<p>Some text about the Airpods..</p>
+					<p class="detailTrade"><a href="trade.html" class="buttonViewDetails" > View Details</a> </p>
+				</div>
 
-					<div class="card">
-					  <img src="assests/image/airpodsMax.jpg" alt="Denim Jeans" style="width:100%">
-					  <h1>Tailored Jeans</h1>
-					  <p class="price">$19.99</p>
-					  <p>Some text about the jeans..</p>
-					  <p><button>View Details</button></p>
-					</div>
+				<div class="cardView">
+					<img src="assests/image/airpodsMax.jpg" alt="airpodsMax" >
+					<h1>Airpods Pro HighQuality</h1>
+					<p class="cost">$199.99</p>
+					<p>Some text about the Airpods..</p>
+					<p class="detailTrade"><a href="trade.html" class="buttonViewDetails" > View Details</a> </p>
+				</div>
 
-					<div class="card">
-					  <img src="assests/image/airpodsMax.jpg" alt="airpodsMax" style="width:100%">
-					  <h1>Airpods Pro HighQuality</h1>
-					  <p class="price">$199.99</p>
-					  <p>Some text about the Airpods..</p>
-					  <p><a href="trade.html"><button> View Details</button> </a></p>
-					</div>
-
-
-					<div class="card">
-					  <img src="assests/image/airpodsMax.jpg" alt="airpodsMax" style="width:100%">
-					  <h1>Airpods Pro HighQuality</h1>
-					  <p class="price">$199.99</p>
-					  <p>Some text about the Airpods..</p>
-					  <p><a href="trade.html"><button> View Details</button> </a></p>
-					</div>
+				<div class="cardView">
+					<img src="assests/image/airpodsMax.jpg" alt="airpodsMax" >
+					<h1>Airpods Pro HighQuality</h1>
+					<p class="cost">$199.99</p>
+					<p>Some text about the Airpods..</p>
+					<p class="detailTrade"><a href="trade.html" class="buttonViewDetails" > View Details</a> </p>
+				</div>
 
 			</div>
 		</div>
 		
 		
 	</article>
-<footer>
+	<footer>
 		<div class="container">
 
 			<div class="footerLinks">
