--- a/trade.html
+++ b/trade.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
 <head>
+	<meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   
 	<title>Trade</title>
 	<link rel = "stylesheet" href="assests/style.css">
 </head>
@@ -10,7 +14,7 @@
 			<div class="userNav">
 				<ul >
 
-					<li class="logo"> <a href="index.html"><img src="assests/image/logo.jpg"> </a> </li>
+					<li class="logo"> <a href="index.html"><img src="assests/image/logo.jpg" alt="logo"> </a> </li>
 
 					<li class="animate"><a href="#"> Sign Up  </a> </li>
 
@@ -20,7 +24,7 @@
 			</div>
 		</div>
 	</header>
-	<
+	
 	<hr>
 	<nav>
 		<div class="novContents">
@@ -36,29 +40,38 @@
 	<article>
 		<div class="tradeMain">
 
-			<div class="tradeImg">
-				<img src="assests/image/airpodsMax.jpg">
-				<h1 id="TradeName"> Airpods Pro Max</h1>
-
-			</div>
-			<div class="detailContents">
-
-				<div class="review"> 
-					Are you interested in the Headphones ?
-					<br>
-					<div class="buttonGrid">
-						<button class="buttonReview"> Trade it </button>
-						<button class="buttonReview"> Rate it </button>
-					</div>
-					<br>
-					<br>e
+			<div class="img-details">
+				<div class="tradeImage">
+				<img src="assests/image/airpodsMax.jpg" alt="airpodsMax">
 				</div>
 
-				<hr class="hrdesign"> </hr>
+				<h1 id="TradeName"> Airpods Pro Max</h1>
+				<h3> by Apple </h3>
+					<hr class="hrdesign"> 
 				<div class="detail"> <h1> Details</h1> <p> 
 					orem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
 
 				</p></div>
+
+			</div>
+
+			<div class="reviewContents">
+
+				<div class="review"> 
+					Are you interested in the Headphones ?
+					<br>
+					<br>
+					<div class="buttonGrid">
+						<a href="trades.html" class="buttonReviewTrade"> Trade it </a>
+						<a href="trades.html" class="buttonReviewRate"> Rate it </a>
+					</div>
+					<br>
+					<br>
+				</div>
+
+				<div class="detail">
+
+				</div>
 			</div>
 
 		</div>
@@ -72,7 +85,7 @@
 				<ul class="siteFooter">
 					<li class="copyright"> <p> &copy; Niner Book Trade </p> </li>
 					<li> <a  href="#"> About </a> </li>
-					<li > <a  href="#"> Contact </a> </li>
+					<li> <a  href="#"> Contact </a> </li>
 				</ul>
 			</div>
 		</div> 
